--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   web:
     build:
       context: ./
-      dockerfile: .
+      dockerfile: Dockerfile
     ports:
       - "80:80"
     volumes:
